// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeProgressScreen should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeProgressScreen
    challengeType="brisk walk"
    currentWorld={1}
    endDateTime="2020-12-31T23:59:59"
    labels={Array []}
    onDismissPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    progressTargets={
      Array [
        2000,
        4000,
        6000,
      ]
    }
    totalCoins={1234}
    unit="steps"
    userProgress={1000}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Image
          resizeMethod="resize"
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../assets/challenge-progress/otter.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        />,
        <TopBar
          coins={1234}
          menuLabel="brisk walk"
          onPressLeftIcon={[MockFunction]}
          timer="2020-12-31T23:59:59"
          type="white"
        />,
        <View
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="ocean-white"
            type="steps"
          />
        </View>,
        null,
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 38,
              "position": "absolute",
              "width": 750,
            }
          }
        >
          <NavBar
            activeIndex={1}
            colour="light"
            hasNotification={false}
            labels={Array []}
            onDismissPress={[MockFunction]}
          />
        </View>,
      ],
      "style": Object {
        "backgroundColor": "rgb(0,81,143)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "resizeMethod": "resize",
          "resizeMode": "cover",
          "source": Object {
            "testUri": "../../../assets/challenge-progress/otter.png",
          },
          "style": Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "menuLabel": "brisk walk",
          "onPressLeftIcon": [MockFunction],
          "timer": "2020-12-31T23:59:59",
          "type": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="ocean-white"
            type="steps"
          />,
          "style": Object {
            "marginTop": 12,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "amount": 1000,
            "goals": Array [
              2000,
              4000,
              6000,
            ],
            "showCounter": false,
            "styleType": "ocean-white",
            "type": "steps",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={1}
            colour="light"
            hasNotification={false}
            labels={Array []}
            onDismissPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "bottom": 38,
            "position": "absolute",
            "width": 750,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 1,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
            "onDismissPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            resizeMethod="resize"
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/challenge-progress/otter.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          />,
          <TopBar
            coins={1234}
            menuLabel="brisk walk"
            onPressLeftIcon={[MockFunction]}
            timer="2020-12-31T23:59:59"
            type="white"
          />,
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="ocean-white"
              type="steps"
            />
          </View>,
          null,
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 38,
                "position": "absolute",
                "width": 750,
              }
            }
          >
            <NavBar
              activeIndex={1}
              colour="light"
              hasNotification={false}
              labels={Array []}
              onDismissPress={[MockFunction]}
            />
          </View>,
        ],
        "style": Object {
          "backgroundColor": "rgb(0,81,143)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "resize",
            "resizeMode": "cover",
            "source": Object {
              "testUri": "../../../assets/challenge-progress/otter.png",
            },
            "style": Object {
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "menuLabel": "brisk walk",
            "onPressLeftIcon": [MockFunction],
            "timer": "2020-12-31T23:59:59",
            "type": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="ocean-white"
              type="steps"
            />,
            "style": Object {
              "marginTop": 12,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "amount": 1000,
              "goals": Array [
                2000,
                4000,
                6000,
              ],
              "showCounter": false,
              "styleType": "ocean-white",
              "type": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={1}
              colour="light"
              hasNotification={false}
              labels={Array []}
              onDismissPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "bottom": 38,
              "position": "absolute",
              "width": 750,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 1,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
              "onDismissPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeProgressScreen should match snapshot with meditation text  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeProgressScreen
    challengeType="meditation"
    currentWorld={1}
    endDateTime="2020-12-31T23:59:59"
    labels={Array []}
    onDismissPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    progressTargets={
      Array [
        2000,
        4000,
        6000,
      ]
    }
    totalCoins={1234}
    unit="steps"
    userProgress={1000}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Image
          resizeMethod="resize"
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../assets/challenge-progress/dolphin.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "height": 1300,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        />,
        <TopBar
          coins={1234}
          menuLabel="meditation"
          onPressLeftIcon={[MockFunction]}
          timer="2020-12-31T23:59:59"
          type="default"
        />,
        <View
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="black"
            type="steps"
          />
        </View>,
        <View
          style={
            Object {
              "marginLeft": 32,
              "marginTop": -68,
              "width": 560,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "rgb(136,136,136)",
                  "fontSize": 26,
                  "lineHeight": 40,
                }
              }
            >
              Complete a meditation session with
            </Text>
            <TouchableOpacity
              activeOpacity={0.2}
              style={
                Object {
                  "paddingLeft": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                Calm
              </Text>
            </TouchableOpacity>
            <Text
              style={
                Object {
                  "color": "rgb(136,136,136)",
                  "fontSize": 26,
                  "lineHeight": 40,
                }
              }
            >
              ,
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              style={
                Object {
                  "paddingRight": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                Headspace
              </Text>
            </TouchableOpacity>
            <Text
              style={
                Object {
                  "color": "rgb(136,136,136)",
                  "fontSize": 26,
                  "lineHeight": 40,
                }
              }
            >
              or any other meditation app
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "rgb(136,136,136)",
                "fontSize": 26,
                "lineHeight": 40,
              }
            }
          >
            that integrates with 
            apple health
            , within the next hour. Results will be shown here.
          </Text>
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 38,
              "position": "absolute",
              "width": 750,
            }
          }
        >
          <NavBar
            activeIndex={1}
            colour="light"
            hasNotification={false}
            labels={Array []}
            onDismissPress={[MockFunction]}
          />
        </View>,
      ],
      "style": Object {
        "backgroundColor": "rgb(255,255,255)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "resizeMethod": "resize",
          "resizeMode": "cover",
          "source": Object {
            "testUri": "../../../assets/challenge-progress/dolphin.png",
          },
          "style": Object {
            "bottom": 0,
            "height": 1300,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "menuLabel": "meditation",
          "onPressLeftIcon": [MockFunction],
          "timer": "2020-12-31T23:59:59",
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="black"
            type="steps"
          />,
          "style": Object {
            "marginTop": 12,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "amount": 1000,
            "goals": Array [
              2000,
              4000,
              6000,
            ],
            "showCounter": false,
            "styleType": "black",
            "type": "steps",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                Complete a meditation session with
              </Text>
              <TouchableOpacity
                activeOpacity={0.2}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(51,51,51)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  Calm
                </Text>
              </TouchableOpacity>
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                ,
              </Text>
            </View>,
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                style={
                  Object {
                    "paddingRight": 4,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(51,51,51)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  Headspace
                </Text>
              </TouchableOpacity>
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                or any other meditation app
              </Text>
            </View>,
            <Text
              style={
                Object {
                  "color": "rgb(136,136,136)",
                  "fontSize": 26,
                  "lineHeight": 40,
                }
              }
            >
              that integrates with 
              apple health
              , within the next hour. Results will be shown here.
            </Text>,
          ],
          "style": Object {
            "marginLeft": 32,
            "marginTop": -68,
            "width": 560,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  style={
                    Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  Complete a meditation session with
                </Text>,
                <TouchableOpacity
                  activeOpacity={0.2}
                  style={
                    Object {
                      "paddingLeft": 4,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Calm
                  </Text>
                </TouchableOpacity>,
                <Text
                  style={
                    Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  ,
                </Text>,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Complete a meditation session with",
                  "style": Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  },
                },
                "ref": null,
                "rendered": "Complete a meditation session with",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Text
                    style={
                      Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Calm
                  </Text>,
                  "onPress": undefined,
                  "style": Object {
                    "paddingLeft": 4,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Calm",
                    "style": Object {
                      "color": "rgb(51,51,51)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    },
                  },
                  "ref": null,
                  "rendered": "Calm",
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": ",",
                  "style": Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  },
                },
                "ref": null,
                "rendered": ",",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <TouchableOpacity
                  activeOpacity={0.2}
                  style={
                    Object {
                      "paddingRight": 4,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Headspace
                  </Text>
                </TouchableOpacity>,
                <Text
                  style={
                    Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  or any other meditation app
                </Text>,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <Text
                    style={
                      Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Headspace
                  </Text>,
                  "onPress": undefined,
                  "style": Object {
                    "paddingRight": 4,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Headspace",
                    "style": Object {
                      "color": "rgb(51,51,51)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    },
                  },
                  "ref": null,
                  "rendered": "Headspace",
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "or any other meditation app",
                  "style": Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  },
                },
                "ref": null,
                "rendered": "or any other meditation app",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "that integrates with ",
                "apple health",
                ", within the next hour. Results will be shown here.",
              ],
              "style": Object {
                "color": "rgb(136,136,136)",
                "fontSize": 26,
                "lineHeight": 40,
              },
            },
            "ref": null,
            "rendered": Array [
              "that integrates with ",
              "apple health",
              ", within the next hour. Results will be shown here.",
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={1}
            colour="light"
            hasNotification={false}
            labels={Array []}
            onDismissPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "bottom": 38,
            "position": "absolute",
            "width": 750,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 1,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
            "onDismissPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            resizeMethod="resize"
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/challenge-progress/dolphin.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "height": 1300,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          />,
          <TopBar
            coins={1234}
            menuLabel="meditation"
            onPressLeftIcon={[MockFunction]}
            timer="2020-12-31T23:59:59"
            type="default"
          />,
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="black"
              type="steps"
            />
          </View>,
          <View
            style={
              Object {
                "marginLeft": 32,
                "marginTop": -68,
                "width": 560,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                Complete a meditation session with
              </Text>
              <TouchableOpacity
                activeOpacity={0.2}
                style={
                  Object {
                    "paddingLeft": 4,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(51,51,51)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  Calm
                </Text>
              </TouchableOpacity>
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                ,
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <TouchableOpacity
                activeOpacity={0.2}
                style={
                  Object {
                    "paddingRight": 4,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(51,51,51)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  Headspace
                </Text>
              </TouchableOpacity>
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                or any other meditation app
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "rgb(136,136,136)",
                  "fontSize": 26,
                  "lineHeight": 40,
                }
              }
            >
              that integrates with 
              apple health
              , within the next hour. Results will be shown here.
            </Text>
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "bottom": 38,
                "position": "absolute",
                "width": 750,
              }
            }
          >
            <NavBar
              activeIndex={1}
              colour="light"
              hasNotification={false}
              labels={Array []}
              onDismissPress={[MockFunction]}
            />
          </View>,
        ],
        "style": Object {
          "backgroundColor": "rgb(255,255,255)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "resize",
            "resizeMode": "cover",
            "source": Object {
              "testUri": "../../../assets/challenge-progress/dolphin.png",
            },
            "style": Object {
              "bottom": 0,
              "height": 1300,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "menuLabel": "meditation",
            "onPressLeftIcon": [MockFunction],
            "timer": "2020-12-31T23:59:59",
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="black"
              type="steps"
            />,
            "style": Object {
              "marginTop": 12,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "amount": 1000,
              "goals": Array [
                2000,
                4000,
                6000,
              ],
              "showCounter": false,
              "styleType": "black",
              "type": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  Complete a meditation session with
                </Text>
                <TouchableOpacity
                  activeOpacity={0.2}
                  style={
                    Object {
                      "paddingLeft": 4,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Calm
                  </Text>
                </TouchableOpacity>
                <Text
                  style={
                    Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  ,
                </Text>
              </View>,
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TouchableOpacity
                  activeOpacity={0.2}
                  style={
                    Object {
                      "paddingRight": 4,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Headspace
                  </Text>
                </TouchableOpacity>
                <Text
                  style={
                    Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    }
                  }
                >
                  or any other meditation app
                </Text>
              </View>,
              <Text
                style={
                  Object {
                    "color": "rgb(136,136,136)",
                    "fontSize": 26,
                    "lineHeight": 40,
                  }
                }
              >
                that integrates with 
                apple health
                , within the next hour. Results will be shown here.
              </Text>,
            ],
            "style": Object {
              "marginLeft": 32,
              "marginTop": -68,
              "width": 560,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    style={
                      Object {
                        "color": "rgb(136,136,136)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    Complete a meditation session with
                  </Text>,
                  <TouchableOpacity
                    activeOpacity={0.2}
                    style={
                      Object {
                        "paddingLeft": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "rgb(51,51,51)",
                          "fontSize": 26,
                          "lineHeight": 40,
                        }
                      }
                    >
                      Calm
                    </Text>
                  </TouchableOpacity>,
                  <Text
                    style={
                      Object {
                        "color": "rgb(136,136,136)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    ,
                  </Text>,
                ],
                "style": Object {
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Complete a meditation session with",
                    "style": Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    },
                  },
                  "ref": null,
                  "rendered": "Complete a meditation session with",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeOpacity": 0.2,
                    "children": <Text
                      style={
                        Object {
                          "color": "rgb(51,51,51)",
                          "fontSize": 26,
                          "lineHeight": 40,
                        }
                      }
                    >
                      Calm
                    </Text>,
                    "onPress": undefined,
                    "style": Object {
                      "paddingLeft": 4,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Calm",
                      "style": Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      },
                    },
                    "ref": null,
                    "rendered": "Calm",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": ",",
                    "style": Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    },
                  },
                  "ref": null,
                  "rendered": ",",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <TouchableOpacity
                    activeOpacity={0.2}
                    style={
                      Object {
                        "paddingRight": 4,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "rgb(51,51,51)",
                          "fontSize": 26,
                          "lineHeight": 40,
                        }
                      }
                    >
                      Headspace
                    </Text>
                  </TouchableOpacity>,
                  <Text
                    style={
                      Object {
                        "color": "rgb(136,136,136)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      }
                    }
                  >
                    or any other meditation app
                  </Text>,
                ],
                "style": Object {
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "activeOpacity": 0.2,
                    "children": <Text
                      style={
                        Object {
                          "color": "rgb(51,51,51)",
                          "fontSize": 26,
                          "lineHeight": 40,
                        }
                      }
                    >
                      Headspace
                    </Text>,
                    "onPress": undefined,
                    "style": Object {
                      "paddingRight": 4,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Headspace",
                      "style": Object {
                        "color": "rgb(51,51,51)",
                        "fontSize": 26,
                        "lineHeight": 40,
                      },
                    },
                    "ref": null,
                    "rendered": "Headspace",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "or any other meditation app",
                    "style": Object {
                      "color": "rgb(136,136,136)",
                      "fontSize": 26,
                      "lineHeight": 40,
                    },
                  },
                  "ref": null,
                  "rendered": "or any other meditation app",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "that integrates with ",
                  "apple health",
                  ", within the next hour. Results will be shown here.",
                ],
                "style": Object {
                  "color": "rgb(136,136,136)",
                  "fontSize": 26,
                  "lineHeight": 40,
                },
              },
              "ref": null,
              "rendered": Array [
                "that integrates with ",
                "apple health",
                ", within the next hour. Results will be shown here.",
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={1}
              colour="light"
              hasNotification={false}
              labels={Array []}
              onDismissPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "bottom": 38,
              "position": "absolute",
              "width": 750,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 1,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
              "onDismissPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
